--- a/Homework4.ipynb
+++ b/Homework4.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -20,23 +18,12 @@
      "text": [
       "Populating the interactive namespace from numpy and matplotlib\n"
      ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "bad magic number in 'inst': b'3\\r\\r\\n'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-1a0f37bbead5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'pylab'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0minst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfmt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: bad magic number in 'inst': b'3\\r\\r\\n'"
-     ]
     }
    ],
    "source": [
     "%pylab inline \n",
     "import pandas as pd\n",
-    "import inst, fmt"
+    "# import inst, fmt"
    ]
   },
   {
@@ -52,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,24 +65,24 @@
     "            d_p[i] = d[i] / b[i]\n",
     "    x[n-1] = d_p[n-1]\n",
     "    for i in range(n-2, -1, -1):\n",
-    "        x[i] = d_p[i] - c_p[i]*x[i+1]\n",
+    "        x[i] = d_p[i] - c_p[i] * x[i+1]\n",
     "    return x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def _test_solve_tridiagonal_matrix(matrix, d):\n",
+    "def test_solve_tridiagonal_matrix(matrix, d):\n",
     "    solution = solve_tridiagonal_matrix(matrix, d)\n",
     "    assert np.allclose(matrix.dot(solution), d) is True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,13 +101,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<center><font size=2><table border=\"1\" class=\"dataframe\">\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -148,26 +149,29 @@
        "      <td>6.1</td>\n",
        "      <td>5.9</td>\n",
        "      <td>5.6</td>\n",
-       "      <td>5.5</td>\n",
+       "      <td>5.55</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
-       "</table></font></center>"
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "               1Y   2Y   3Y   5Y   7Y  10Y  12Y  15Y  20Y   25Y\n",
+       "Par Rate (%)  4.2  4.3  4.7  5.4  5.7  6.0  6.1  5.9  5.6  5.55"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "mats = np.array([1, 2, 3, 5, 7, 10, 12, 15, 20, 25])*1.\n",
+    "mats = np.array([1, 2, 3, 5, 7, 10, 12, 15, 20, 25]) * 1.\n",
     "par = np.array([.042, .043, .047, .054, .057, .06, .061, .059, .056, .0555])\n",
     "\n",
     "df_swap = pd.DataFrame(np.array([par]).T*100, columns=[\"Par Rate (%)\"], \n",
     "                       index=map(lambda m: '%dY' % m, mats))\n",
-    "fmt.displayDF(df_swap.T, 2, 2)"
+    "df_swap.T"
    ]
   },
   {
@@ -185,24 +189,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PV by maturity\n",
-      "1 Y : 0.00155\n",
-      "2 Y : 0.004943\n",
-      "3 Y : 0.01846\n",
-      "5 Y : 0.06101\n",
-      "7 Y : 0.1003\n",
-      "10 Y : 0.1599\n",
-      "12 Y : 0.1943\n",
-      "15 Y : 0.2077\n",
-      "20 Y : 0.2126\n",
-      "25 Y : 0.2362\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'lin'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-adfc0ed29fb6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mswap\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSwap\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpriceSwap\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mlin\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# the pricing function if curve(t) is the cumulative yield, ie, -log(b(t))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0my2pv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mswap\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcurve\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'lin'"
      ]
     }
    ],
@@ -262,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
