Fix Lecture6 Typos

--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "* one of the most important and widely used numerical methods in scientific computing\n",
     "* invented in the 40s, born with computers\n",
-    "  * first used in Mahattan project, then for the development of Hydrogen bomb\n",
+    "  * first used in Manhattan project, then for the development of Hydrogen bomb\n",
     "* widely used in quantitative finance, more popular recently with the rise of GPUs"
    ]
   },
@@ -271,7 +271,7 @@
     " \n",
     "* $\\hat s$ is routinely used as an estimator for $\\sigma$\n",
     "* $\\hat s$ follows Chi distribution, which converges to normal for large $n$\n",
-    "* error and standard deviation $\\hat s$ are often used interchangebly\n",
+    "* error and standard deviation $\\hat s$ are often used interchangeably\n",
     "\n",
     "Is standard deviation is an unbiased estimator of $\\sigma$?"
    ]
@@ -320,7 +320,7 @@
     "* the true MC error is $\\frac{\\sigma}{\\sqrt{n}}$, but $\\sigma$ is usually unknown\n",
     "* $\\frac{\\hat s}{\\sqrt{n}}$ is a biased estimator to the true MC error, but good enough\n",
     "\n",
-    "The error of MC erorr is therefore $\\std(\\frac{\\hat s}{\\sqrt n}) = \\frac{\\std(\\hat s)}{\\sqrt n}$: \n",
+    "The error of MC error is therefore $\\std(\\frac{\\hat s}{\\sqrt n}) = \\frac{\\std(\\hat s)}{\\sqrt n}$: \n",
     "* we know the var of sample var, but we need std of sample std\n",
     "* can we simply compute $\\std(\\hat s) \\approx \\sqrt{\\std(\\hat s^2)} = \\sqrt[4]{\\var(\\hat s^2)} $ ?"
    ]
@@ -528,7 +528,7 @@
     "Batching is a generic method to estimate MC errors with dependent samples\n",
     "* Repeat the MC simulation $b$ times, and obtain $\\hat{\\mu}_i$ for $i = 1 ... b$ \n",
     "  * each batch has **different** random seeds, *ceteris paribus*\n",
-    "* $\\hat{\\mu}_i$ are indepent between batches, \n",
+    "* $\\hat{\\mu}_i$ are independent between batches, \n",
     "  * the variance of $\\hat \\mu$ can be estimated directly  $\\hat s_b^2 = \\frac{1}{b-1} \\sum_i (\\mu_i^2 - \\bar{\\mu})^2$ \n",
     "  * $\\bar{\\mu} = \\frac{1}{b} \\sum_i\\hat{\\mu}_i$ is the batch mean estimator, its error is $\\frac{\\hat s_b}{\\sqrt{b}}$"
    ]
@@ -548,7 +548,7 @@
     "$$\\int_0^1\\sqrt{1-x^2}dx = \\frac{\\pi}{4}$$\n",
     "\n",
     "* MC is inefficient, only converges at $\\propto \\frac{1}{\\sqrt{n}}$\n",
-    "* In comparision, Simpson rule converges at $\\propto \\frac{1}{n^4}$"
+    "* In comparison, Simpson rule converges at $\\propto \\frac{1}{n^4}$"
    ]
   },
   {
@@ -668,8 +668,8 @@
     "\n",
     "#### Derivative pricing:\n",
     "$$ \\frac{v(t_0)}{m(t_0)} = \\mathbb{E}^\\mathbb{Q}\\left[\\frac{v(t)}{m(t)} \\bigg| \\mathcal{F}_{t_0}\\right] $$\n",
-    "* $m(t)$ is a numeraire seccurity, $\\mathbb{Q}$ is the measure induced by the numerarie $m(t)$\n",
-    "* Often used for pricing high dimensional exotic and path dependent derivataives\n",
+    "* $m(t)$ is a numeraire seccurity, $\\mathbb{Q}$ is the measure induced by the numeraire $m(t)$\n",
+    "* Often used for pricing high dimensional exotic and path dependent derivatives\n",
     "\n",
     "#### XVA adjustments: CVA/FVA/DVA\n",
     "* an  active research area\n",
@@ -707,7 +707,7 @@
    "source": [
     "## Advantages of Monte Carlo\n",
     "\n",
-    "There are good reasons why Monte carlo is widely used in quant finance:\n",
+    "There are good reasons why Monte Carlo is widely used in quant finance:\n",
     "\n",
     "* dimensionality independent\n",
     "* generic: widely applicable\n",
@@ -742,7 +742,7 @@
    "source": [
     "## True and pseudo random numbers\n",
     "\n",
-    "True random number generators (T-RNG) observe random physical processess:\n",
+    "True random number generators (T-RNG) observe random physical processes:\n",
     "* often involves quantum effects: radioactive decay, electrical/thermal noise etc.\n",
     "* costly and slow\n",
     "* mostly used in cryptography that requires a high level of security\n",
@@ -768,7 +768,7 @@
     "\n",
     "* must pass rigorous statistical tests \n",
     "* numerical scientists have devoted their careers to build good P-RNGs\n",
-    "* always use a good P-RNG libarary and never write your own\n",
+    "* always use a good P-RNG library and never write your own\n",
     "  * ```random()``` in Excel is implemented [incorrectly](http://www.pages.drexel.edu/~bdm25/excel-rng.pdf), don't use it for anything serious"
    ]
   },
@@ -785,7 +785,7 @@
     "The most popular P-RNG:\n",
     "* often the default P-RNG for MC\n",
     "  * the default choice of Python's ```numpy.random.uniform```\n",
-    "* very long cycle of $2^{19937} − 1$ and exellent statistical properties\n",
+    "* very long cycle of $2^{19937} − 1$ and excellent statistical properties\n",
     "* suitable for MC applications, but **not** good for cryptography\n",
     "* very fast: ~100M random numbers per second on a modern PC"
    ]
@@ -800,7 +800,7 @@
    "source": [
     "## Non-uniform random numbers\n",
     "\n",
-    "P-RNGs produces uniform random numbers bewteen [0, 1]\n",
+    "P-RNGs produces uniform random numbers between [0, 1]\n",
     "* RNs of other distributions can be built by transformations\n",
     "\n",
     "Given the cumulative distribution function $F(x)$, $\\tilde x = F^{-1}(\\tilde u)$ transforms a uniform $\\tilde u$ to the desired distribution:\n",
@@ -809,7 +809,7 @@
     "\\mathbb{P}[\\tilde x < x]= \\mathbb{P}[F^{-1}(\\tilde u) < x] = \\mathbb{P}[\\tilde u < F(x)] = F(x)\n",
     "$$\n",
     "\n",
-    "* a universal method to produce non-unifrom RNs\n",
+    "* a universal method to produce non-uniform RNs\n",
     "* works the best when $F^{-1}(\\cdot)$ can be compute cheaply and accurately"
    ]
   },
@@ -844,11 +844,11 @@
    "source": [
     "## Normal inversion\n",
     "\n",
-    "Numerical inversion of normal CDF is an effective alternative to genrate normal random numbers:\n",
+    "Numerical inversion of normal CDF is an effective alternative to generate normal random numbers:\n",
     "* fast and accurate numerical inversion of the normal CDF were [discovered recently](http://home.online.no/~pjacklam/notes/invnorm/)\n",
     "* based on polynomial approximation, accuracy is ~$10^{-9}$\n",
     "* every uniform RN produce a normal RN output, more convenient than the polar Box-muller\n",
-    "* works well with low discrepency sequences (next lecture)\n",
+    "* works well with low discrepancy sequences (next lecture)\n",
     "\n",
     "Normal inversion is often preferred over the Box-muller."
    ]
@@ -1001,7 +1001,7 @@
     "* order 1 weak convergence, $O(\\delta)$\n",
     "* order $\\frac{1}{2}$ strong convergence, $O(\\sqrt{\\delta})$\n",
     "\n",
-    "For processess with known analytical solutions, more efficient sampling method can be devised"
+    "For processes with known analytical solutions, more efficient sampling method can be devised"
    ]
   },
   {
@@ -1034,11 +1034,11 @@
     }
    },
    "source": [
-    "## Ornsten-Uhlenbeck process:\n",
+    "## Ornstein-Uhlenbeck process:\n",
     "\n",
     "$$dx(t) = \\kappa(\\bar x - x(t)) dt + \\sigma dw(t)$$\n",
     "\n",
-    "* commonly used in interest rate modelling (a.k.a. Vasicek model) and empirical studies\n",
+    "* commonly used in interest rate modeling (a.k.a. Vasicek model) and empirical studies\n",
     "* the most tractable and widely used process to capture mean reversion\n",
     "\n",
     "The analytical solution is\n",
@@ -1099,7 +1099,7 @@
     "$$\\small dy(t) = \\frac{1}{x(t)}\\left(\\kappa(x(t) - \\bar x) - \\frac{\\sigma^2}{2} \\right) dt + \\frac{\\sigma}{\\sqrt{x(t)}}dw(t) $$\n",
     "\n",
     "* Euler scheme can then be applied to sample $y(t)$, without added bias\n",
-    "* it can be easiliy extended to sample any bounded processes\n",
+    "* it can be easily extended to sample any bounded processes\n",
     "* But in practice, we still need a reflective bound for $y(t)$ otherwise it goes to $-\\infty$ quickly."
    ]
   },
@@ -1147,7 +1147,7 @@
     "Note that $\\int w_t dw_t = \\frac{1}{2}(w_t^2 - t)$, the term in the bracket becomes:\n",
     "$$ \\small \\frac{1}{2} (w_{t+\\delta t}^2 - w_t^2) - \\frac{1}{2}\\delta t - w_t(w_{t+\\delta t} - w_t) = \\frac{1}{2}(w_{t+\\delta t} - w_t)^2 - \\frac{\\delta t}{2} \\approx \\frac{1}{2}(\\delta^2w - \\delta t) $$\n",
     " \n",
-    "This term vanishes for infinitesimal $dt$ but not for finited sample size $\\delta t$. "
+    "This term vanishes for infinitesimal $dt$ but not for finite sample size $\\delta t$. "
    ]
   },
   {
@@ -1315,7 +1315,7 @@
     "\n",
     "$$\\mathbb{E}[f(\\hs(t; \\delta))] = \\mathbb{E}[f(\\bs s(t)] + c \\delta + O(\\delta^2)$$\n",
     "\n",
-    "Richard extraploation can be applied to get 2nd order weak convergence: \n",
+    "Richard extrapolation can be applied to get 2nd order weak convergence: \n",
     "\n",
     "$$\\begin{array}{l} \n",
     "\\mathbb{E}[f(\\hs(t; 2\\delta))] &= \\mathbb{E}[f(\\bs s(t)] + 2c \\delta + O(\\delta^2) \\\\\n",
@@ -1433,7 +1433,7 @@
    "source": [
     "## Free boundary problem\n",
     "\n",
-    "The american option's value can be expressed as an optimization of:\n",
+    "The American option's value can be expressed as an optimization of:\n",
     "\n",
     "$$ v(b^*(t)) = \\max_{b(t)} [v\\left(b\\left(t\\right)\\right)] $$\n",
     "\n",
@@ -1697,7 +1697,7 @@
    },
    "source": [
     "We present it using a numerical example of American put:\n",
-    "* maturty 1Y, stock price $s(0) = 100$, strike $k=100$, vol $\\sigma = .25$\n",
+    "* maturity 1Y, stock price $s(0) = 100$, strike $k=100$, vol $\\sigma = .25$\n",
     "* continuous compounded discount rate of $r = 0.1$\n",
     "* the exact value of this American put is 6.523\n",
     "* the European option worths 5.460"
@@ -1846,7 +1846,7 @@
    },
    "source": [
     "* the red line is a polynomial best fit to the continuation values (in the money paths only, blue dots)\n",
-    "* the option is exercised if the exericise value (black line) is greater than the best guess (red line)\n",
+    "* the option is exercised if the exercise value (black line) is greater than the best guess (red line)\n",
     "* $\\bs v(t_{m-1})$ is known for each simulated path using the exercise decision\n",
     "* $\\bs v(t_{m-1})e^{-r\\delta}$ is therefore the continuation value (c.v.) at $t_{m-2}$"
    ]
@@ -2045,7 +2045,7 @@
     "  $$\\left\\Vert \\ind\\left(\\hs(t_{m-1}) < k\\right) \\odot \\left( u\\left(\\hs(t_{m-1}); t_{m-1}\\right) - \\bs v(t_m)e^{-r\\delta} \\right)\\right\\Vert_2 $$\n",
     "  \n",
     "    * $u(\\cdot)$ is an estimate of the option's c.v., based on $\\hs(t_{m-1})$\n",
-    "    * $u(s; t_{m-1}) = c_0 + c_1 s + c_2 s^2$, coeficients are solved by least square\n",
+    "    * $u(s; t_{m-1}) = c_0 + c_1 s + c_2 s^2$, coefficients are solved by least square\n",
     "    * $\\ind(\\cdot) \\odot$ excludes OTM paths $\\rightarrow$ better accuracy\n",
     "  2. exercise decision is: $\\bs e = \\ind\\left(\\left(k - \\hs(t_{m-1})\\right) > u\\left(\\hs; t_{m-1}\\right)^+\\right)$\n",
     "  3. option value: $ \\bs v(t_{m-1}) = \\bs e \\odot\\left(k-\\hs(t_{m-1})\\right)^+ + (\\bs 1 - \\bs e) \\odot \\bs v(t_m)e^{-r\\delta}$\n",
@@ -2100,7 +2100,7 @@
     "$$ u(s; t_{m-1}) = c_0 + c_1 s + c_2 s^2  < k - s $$\n",
     "\n",
     "* it can also be directly obtained from the MC simulation\n",
-    "* the exercise bounary from LSMC is not very accurate (smooth)"
+    "* the exercise boundary from LSMC is not very accurate (smooth)"
    ]
   },
   {
@@ -2141,12 +2141,12 @@
    "source": [
     "## Lower bound\n",
     "\n",
-    "we can conclude the folllowing (barring the discretization and MC errors):\n",
+    "we can conclude the following (barring the discretization and MC errors):\n",
     "* 1A clearly is a lower bound of American option\n",
     "* 1B gives a higher value than 1A, because it makes use of the aggregated information of future paths during the least square\n",
     "\n",
     "Therefore, 1B is not necessarily a lower bound, due to the offsetting effects.\n",
-    "* 1B is prefered over 1A because of faster speed and less bias "
+    "* 1B is preferred over 1A because of faster speed and less bias "
    ]
   },
   {
@@ -2270,7 +2270,7 @@
     "To estimate the exact LSMC error, we have to use batching\n",
     "\n",
     "* repeat the LSMC 10 times using 100,000 sample paths each\n",
-    "* we also report the MC error using the indpendence assumptions\n",
+    "* we also report the MC error using the independence assumptions\n",
     "* the (incorrect) independence assumption only leads to a slight over-estimation of the MC error"
    ]
   },
@@ -2447,9 +2447,9 @@
     }
    },
    "source": [
-    "# Assigment\n",
+    "# Assignment\n",
     "\n",
-    "Recommented reading:\n",
+    "Recommended reading:\n",
     "\n",
     "* Andersen and Piterbarg: Chapter 3.1-3.3\n",
     "\n",
