--- a/Homework6.ipynb
+++ b/Homework6.ipynb
@@ -105,8 +105,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. use the above code to inverse 1 million equally sampled numbers btw 0 and 1, compare it with the build in scipy.stat.norm.ppf function to verify that the absolute error is on the order of $10^{-9}$. Is there a different btw the first run and the subsequent runs with the @jit flag on?\n",
-    "2. remove the @git flag, and repeat 1, note the speed difference."
+    "1. use the above code to inverse 1 million equally sampled numbers btw 0 and 1, compare it with the build in `scipy.stats.norm.ppf` function to verify that the absolute error is on the order of $10^{-9}$. Is there a difference btw the first run and the subsequent runs with the @jit flag on?\n",
+    "2. remove the @jit flag, and repeat 1, note the speed difference."
    ]
   },
   {
@@ -115,7 +115,7 @@
    "source": [
     "## Problem 2\n",
     "\n",
-    "This problem explores the expoential log Euler and the Milstein scheme on the following CIR process:\n",
+    "This problem explores the exponential log Euler and the Milstein scheme on the following CIR process:\n",
     "\n",
     "$$ d r(t) = \\kappa (\\bar{r} - r(t)) dt + \\sigma \\sqrt{r(t)} dw(t)$$\n",
     "\n",
@@ -176,7 +176,7 @@
     "\n",
     "Price a American call option using LSMC, assuming:\n",
     "* initial stock price and option strikes: $s(0) = k = 100$\n",
-    "* continuounsly compounded discount rate $r = 0.02$\n",
+    "* continuously compounded discount rate $r = 0.02$\n",
     "* continuous dividend yield is $y = 0.1$\n",
     "* stock volatility $\\sigma = 0.25$\n",
     "* option expiry: $t = 1Y$\n",
@@ -185,7 +185,7 @@
     "1. European and American option prices\n",
     "2. Exercise boundary\n",
     "\n",
-    "For this exercise, obviously you should not use the mc package provided as part of the lecture, you need to implement you own Americal LSMC pricer."
+    "For this exercise, obviously you should not use the `mc` package provided as part of the lecture, you need to implement you own American LSMC pricer."
    ]
   }
  ],
