Fix Lecture 7 typos

--- a/Lecture7.ipynb
+++ b/Lecture7.ipynb
@@ -15,7 +15,7 @@
     "* Overview\n",
     "* Control variate\n",
     "* Importance sampling\n",
-    "* Low discrepency sequence\n",
+    "* Low discrepancy sequence\n",
     "* Other techniques"
    ]
   },
@@ -84,7 +84,7 @@
    "source": [
     "## Total MC cost\n",
     "\n",
-    "The minimum number of samples erquired for a given accuracy $\\epsilon$ is:\n",
+    "The minimum number of samples required for a given accuracy $\\epsilon$ is:\n",
     "\n",
     "$$\\frac{\\sigma}{\\sqrt{n}} = \\epsilon \\iff n = \\frac{\\sigma^2}{\\epsilon^2}$$ \n",
     "\n",
@@ -116,7 +116,7 @@
     "Use more efficient estimator than the mean of independent random samples:\n",
     "\n",
     "* Importance sampling\n",
-    "* Low-discrepency sequence (aka Quasi-random sequence)\n",
+    "* Low-discrepancy sequence (aka Quasi-random sequence)\n",
     "* Moment matching\n",
     "* Stratified sampling"
    ]
@@ -234,7 +234,7 @@
     "## Motivation\n",
     "\n",
     "Exotic trades are often 90% vanilla, but with a small exotic feature\n",
-    "* the vanila trade is often a good proxy to the exotic trade\n",
+    "* the vanilla trade is often a good proxy to the exotic trade\n",
     "* e.g. Asian option vs. vanilla European option\n",
     "  * Asian payoff is computed from average prices\n",
     "\n",
@@ -299,7 +299,7 @@
     "\n",
     "Consider the following Asian call option:\n",
     "* $s(0) = 100, k=100, \\sigma = .25$, maturity $t_m = 1$Y\n",
-    "* constant countinuous risk free rate of $r=0.02$\n",
+    "* constant continuous risk free rate of $r=0.02$\n",
     "* payoff at maturity is based on monthly average of stock prices: \n",
     "$$\\left(\\frac{1}{n}\\sum_{i=1}^{n} s(i\\delta) - k\\right)^+$$\n",
     "with $\\delta = \\frac{1}{12}, n=\\frac{t_m}{\\delta} = 12$\n",
@@ -473,7 +473,7 @@
    "source": [
     "## Geometric Asian option\n",
     "\n",
-    "Consider the geomeric mean of the stock prices: \n",
+    "Consider the geometric mean of the stock prices: \n",
     "\n",
     "$$ g = \\exp\\left(\\sum_{i=1}^{n} \\log\\left(s\\left(i\\delta\\right)\\right)\\right) $$\n",
     "\n",
@@ -556,7 +556,7 @@
    },
    "source": [
     "Disclaimer: such dramatic reduction in variance is not typical:\n",
-    "* 10x - 20x reduction is an exellent result in practice"
+    "* 10x - 20x reduction is an excellent result in practice"
    ]
   },
   {
@@ -828,7 +828,7 @@
     }
    },
    "source": [
-    "# Pitfalls with sampling extrememe events\n",
+    "# Pitfalls with sampling extreme events\n",
     "\n",
     "Consider the following scenario of winning odds $p=10^{-8}$:\n",
     "\n",
@@ -949,7 +949,7 @@
     }
    },
    "source": [
-    "## Unequal probablity weights\n",
+    "## Unequal probability weights\n",
     "\n",
     "The importance sampling estimator is therefore:\n",
     "\n",
@@ -1081,7 +1081,7 @@
     "2. If an issuer's survival probability is $p_i(t)$ at time $t$, then we can draw the default\n",
     "time $\\tilde \\tau$ as:\n",
     "$$ p_i(\\tilde \\tau_i) = \\Phi(\\tilde x_i) \\iff \\tilde \\tau_i = p_i^{-1}(\\Phi(\\tilde x_i))$$  \n",
-    "3. the coresponding default indicator at time $t$ is: \n",
+    "3. the corresponding default indicator at time $t$ is: \n",
     "$$\\ind(\\tau_i < t) = \\ind(\\Phi(x_i) > p_i(t))$$\n",
     "\n",
     "The resulting default time $\\tau_i$ and default indicators $\\ind_i$ are correlated through $m$"
@@ -1349,7 +1349,7 @@
    "metadata": {},
    "source": [
     "* a shift of $\\tilde m$ around -1.5 gives the most variance reduction\n",
-    "* here we followed the convesion that negative $\\tilde m$ means to more defaults"
+    "* here we followed the convention that negative $\\tilde m$ means to more defaults"
    ]
   },
   {
@@ -1674,7 +1674,7 @@
     }
    },
    "source": [
-    "# Low discrepency sequence\n",
+    "# Low discrepancy sequence\n",
     "\n",
     "Stephen Sondheim: art, in itself, is an attempt to bring order out of chaos."
    ]
@@ -1749,17 +1749,17 @@
     }
    },
    "source": [
-    "## Low discrepency sequence\n",
+    "## Low discrepancy sequence\n",
     "\n",
-    "Low discrepency sequence (LDS) places samples in a methodical and deterministic fashion:\n",
+    "Low discrepancy sequence (LDS) places samples in a methodical and deterministic fashion:\n",
     "* the whole sampling space is evenly covered:\n",
-    "* sucessive addition of sample points leads to uniformly better coverage\n",
+    "* successive addition of sample points leads to uniformly better coverage\n",
     "* also known as quasi random sequence (QRS)\n",
     "\n",
-    "There are many types of low discrepency sequence:\n",
+    "There are many types of low discrepancy sequence:\n",
     "* e.g. Sobol sequence, Halton sequence\n",
     "\n",
-    "MC with low discrepency sequence:\n",
+    "MC with low discrepancy sequence:\n",
     "* easy to implement: just replace the uniform random number generator\n",
     "* variance has to be estimated using batching method"
    ]
@@ -1823,7 +1823,7 @@
    "source": [
     "## LDS and dimensionality\n",
     "\n",
-    "LDS gives exellent convergence for low to medium number of dimensions:\n",
+    "LDS gives excellent convergence for low to medium number of dimensions:\n",
     "* popular LDS converges at $\\propto \\frac{\\log^n(d)}{n}$, where $d$ is dimensionality and $n$ is the number of samples.\n",
     "* much faster than the convergence of random samples of $\\propto \\frac{1}{\\sqrt{n}}$\n",
     "\n",
@@ -2209,7 +2209,7 @@
     "\n",
     "Consider drawing uniform random numbers in 1-D:\n",
     "* divide the range [0, 1] into $n$ buckets (or strata), each with length $\\frac{1}{n}$\n",
-    "* map the unform to each bucket in a round robin manner: \n",
+    "* map the uniform to each bucket in a round robin manner: \n",
     "\n",
     "$$\\hat v_i = \\frac{(i \\mod n) + \\hat u_i}{n}$$\n",
     "\n",
@@ -2225,7 +2225,7 @@
    },
    "source": [
     "Stratification is similar to LDS in spirit, but:\n",
-    "* more difficulty in extending to higher dimensions, the number of strata expodes with dimensions\n",
+    "* more difficulty in extending to higher dimensions, the number of strata explodes with dimensions\n",
     "* less popular than LDS in practice"
    ]
   },
@@ -2338,9 +2338,9 @@
     }
    },
    "source": [
-    "# Assigment\n",
+    "# Assignment\n",
     "\n",
-    "Recommented reading:\n",
+    "Recommended reading:\n",
     "\n",
     "* Andersen and Piterbarg: Chapter 3.3-3.4\n",
     "\n",
