Updating Lec 8 & Homework 8

--- a/Homework8.ipynb
+++ b/Homework8.ipynb
@@ -66,25 +66,9 @@
    "source": [
     "## Problem 3\n",
     "\n",
+    "Prove the statement that for convex problems, any local minimum is also a global minimum.\n",
     "\n",
-    "Similar to our example in class, here is the table of future liabilities (in $millions):\n",
-    "\n",
-    "|  Years | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 |\n",
-    "| :-----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: |\n",
-    "|  Benefits($millions) | 24 | 26 | 28 | 28 | 26 | 29 | 32 | 33 | 34 |\n",
-    "\n",
-    "\n",
-    "And here is the set of bonds that can be invested in:\n",
-    "\n",
-    "|  Bonds | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 | 10 | 11 | 12 |\n",
-    "| :-----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: | :----: |\n",
-    "|  Price | 102 | 101.625 | 103 | 102 | 102 | 103 | 101 | 101.5 | 102 | 102.75 | 103 | 104 |\n",
-    "|  Coupon(%) | 1.25 | 1.5 | 2.5 | 1.75 | 2.125 | 2.5 | 2.625 | 3 | 3.125 | 3.5 |  3.75 | 4.5 |\n",
-    "|  Maturity(Years) | 1 | 2 | 2 | 3 | 4 | 5 | 5 | 6 | 7 | 8 |  8 | 9 |\n",
-    "\n",
-    "\n",
-    "Consider two excess cash scenarios: 1) not reused at each period. 2) reinvested at 1% interest rate and reused. \n",
-    "Find the **least cost** portfolio of bonds so that the pension fund can meet its future liabilities. Please show your LP problem set up.\n"
+    "Hint: use contradiction, define the circle of the local mimimum region, if there is a lower global minimum, find a point within the local circle that its function value is less than the local minimum value.\n"
    ]
   }
  ],
@@ -104,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
