--- a/Homework9.ipynb
+++ b/Homework9.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework Set 9"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -14,23 +21,14 @@
     }
    ],
    "source": [
-    "%pylab inline\n",
-    "import math"
+    "%pylab inline"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework Set 7"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Homework\n",
-    "\n",
+    "## Problem 1\n",
     "\n",
     "\n",
     "Similar to our example in class, here is the table of future liabilities (in $millions):\n",
@@ -49,7 +47,7 @@
     "|  Maturity(Years) | 1 | 2 | 2 | 3 | 4 | 5 | 5 | 6 | 7 | 8 |  8 | 9 |\n",
     "\n",
     "\n",
-    "Consider two excess cash scenarios: 1)  not reused at each period. 2) reinvested at 1% interest rate and reused.\n",
+    "Consider two excess cash scenarios: 1) not reused at each period. 2) reinvested at 1% interest rate and reused. \n",
     "Find the **least cost** portfolio of bonds so that the pension fund can meet its future liabilities. Please show your LP problem set up.\n"
    ]
   }
@@ -70,7 +68,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
