--- a/Lecture8.ipynb
+++ b/Lecture8.ipynb
@@ -445,10 +445,7 @@
     "* These are all  natural conclusions from what you are already very familiar with (hopefully!): properties of a quadratic function and the Taylor series for a general (twice-differentiable) function\n",
     "\n",
     "$$\n",
-    "f(\\bx^* + \\bs\\delta x) = f(\\bx^*) \n",
-    "                       + {\\bs\\nabla} f(\\bx^*)^T {\\bs\\delta x} \n",
-    "                       + \\frac{1}{2} {\\bs\\delta x}^T{\\bs\\nabla^2} f(\\bx^*)  {\\bs\\delta x}\n",
-    "                       + {\\bs O}(||{\\bs\\delta x}||^3)\n",
+    "f(\\bx^* + \\bs\\delta x) = f(\\bx^*) + {\\bs\\nabla} f(\\bx^*)^T {\\bs\\delta x} + \\frac{1}{2} {\\bs\\delta x}^T{\\bs\\nabla^2} f(\\bx^*)  {\\bs\\delta x} + {\\bs O}(||{\\bs\\delta x}||^3)\n",
     "$$\n",
     "\n",
     "\n"
@@ -621,7 +618,7 @@
     "\n",
     "* Similar in spirit to the Bisection method in one dimemsion. Requires only function evaluations.\n",
     "\n",
-    "* Quoting M. Wright: \"A direct serach method does not 'in its heart' develop an approximate gradient\".\n",
+    "* Quoting M. Wright: \"A direct search method does not 'in its heart' develop an approximate gradient\".\n",
     "\n",
     "\n",
     "* Representative: Nelder-Mead Method (or Simplex Search method)\n",
@@ -790,9 +787,7 @@
     "* If the objective function is twice differentiable, we have with more accuracy\n",
     "\n",
     "$$\n",
-    "f(\\bx^k + \\bs\\delta x) \\approx f(\\bx^k) \n",
-    "                       + {\\bs\\nabla} f(\\bx^k)^T {\\bs\\delta x}                             \n",
-    "                       + \\frac{1}{2} {\\bs\\delta x}^T{\\bs\\nabla^2} f(\\bx^k)  {\\bs\\delta x}\n",
+    "f(\\bx^k + \\bs\\delta x) \\approx f(\\bx^k) + {\\bs\\nabla} f(\\bx^k)^T {\\bs\\delta x} + \\frac{1}{2} {\\bs\\delta x}^T{\\bs\\nabla^2} f(\\bx^k)  {\\bs\\delta x}\n",
     "$$\n",
     "\n",
     "* RHS is a quadratic function in ${\\bs\\delta x}$, so the minimum is achieved at\n",
@@ -933,8 +928,6 @@
     "$$\n",
     "\\df(\\bmu, \\bld) \\leq f(\\bx^*).\n",
     "$$\n",
-    "     \n",
-    "    (HW: prove the above statement).\n",
     "\n",
     "\n"
    ]
@@ -1120,7 +1113,7 @@
    "source": [
     "\n",
     "\n",
-    "* Best way to visualize the conditions 1 and 4 above is through the followimng example, where\n",
+    "* Best way to visualize the conditions 1 and 4 above is through the following example, where\n",
     "\n",
     "$$ f(\\bx^*) = (x_1 -2)^2 + (x_2 -2)^2, \\;\\;\\; g(\\bx^*) = x_1^2 + x_2^2 - 1$$\n",
     "\n",
@@ -1157,8 +1150,7 @@
     "$$\n",
     "\\begin{array}\n",
     "\\\\\n",
-    "\\min_{\\bx\\in \\mathbb{R}^n} & {\\bs\\nabla} f(\\bx^k)^T {(\\bx - \\bx^k)}                             \n",
-    "                       + \\frac{1}{2} {(\\bx - \\bx^k)}^T{\\bs\\nabla^2} f(\\bx^k)  {(\\bx - \\bx^k)}\n",
+    "\\min_{\\bx\\in \\mathbb{R}^n} & {\\bs\\nabla} f(\\bx^k)^T {(\\bx - \\bx^k)} + \\frac{1}{2} {(\\bx - \\bx^k)}^T{\\bs\\nabla^2} f(\\bx^k)  {(\\bx - \\bx^k)}\n",
     "\\\\\n",
     "s.t. & {\\bs\\nabla} \\bs{h}(\\bx^k)^T {(\\bx - \\bx^k)} + \\bs{h}(\\bx^k)  = \\bs{0}\n",
     "\\\\\n",
@@ -1167,23 +1159,6 @@
     "$$\n",
     "\n",
     "* This is a constrained quadratic programming problem, which is \"slightly\" easier to deal with than the original problem.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "\n",
-    "# Homework:\n",
-    "\n",
-    "* HW on the slide for Duality\n",
-    "* For the portfolio optimization example given earlier, derive the dual problem.\n",
-    "\n",
-    "* Due on Apr 8th, 2015.\n"
    ]
   }
  ],
@@ -1204,7 +1179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
